contact button mobile fix

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -6678,7 +6678,7 @@ section.banner.s3.s2 .container .swiper-button-prev {
     background: url("/assets/images/logo/adl-logo-mobile.svg");
     background-size: 150px 50px;
     background-repeat: no-repeat;
-    background-position: left;
+    background-position: -10px;
     width: 150px;
     height: 50px;
   }
@@ -6692,7 +6692,12 @@ section.banner.s3.s2 .container .swiper-button-prev {
   }
 
   .header__right .action-btn {
-    right: 30px;
+    right: 35px;
+  }
+
+  .action-btn {
+    background: none;
+    border: none;
   }
 }
 
